--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1515,3 +1515,32 @@ main .mie_ride_download .right_main_download .card_container_right p {
   }
 }
 
+
+
+/* Splash Screen Styling */
+#splash-screen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #f9f9f9; /* Green background */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #000;
+  font-family: Arial, sans-serif;
+  font-size: 36px;
+  z-index: 1000;
+}
+
+
+
+#splash-screen {
+  opacity: 1;
+  transition: opacity 1s ease-out;
+}
+
+#splash-screen.hidden {
+  opacity: 0;
+}
