--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1861,10 +1861,21 @@ main .mie_ride_download .right_main_download .card_container_right p {
 
 
 @media screen and (max-width:991px) {
+  .main_banner {
+    padding-top: 50px;
+    padding-bottom: 60px;
+}
+  .logo_section{
+    padding: 5px 0px;
+  }
+  .logo_section img {
+    margin-top: 0px;
+}
   main .mie_ride_service .main_title_line p {
       margin-top: 20px;
-    font-size: 13px;
-}
+       font-size: 13px;
+    }
+
 main .main_ride_service {
   margin-top: 55px;
 }
