--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1844,6 +1844,16 @@ main .mie_ride_download .botton_layer img{
   opacity: 0.3
 }
 @media screen and (max-width:991px) {
+  main .mie_ride_download .botton_layer_2{
+    padding: 20px;
+    margin-top: 40px;
+  
+  }
+  main .mie_ride_download .botton_layer{
+     padding: 20px;
+    margin-top: 40px;
+  
+  }
   main .mie_ride_download .right_main_download{
     margin-top: 120px;
     display: flex;
