--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1612,6 +1612,7 @@ main .mie_ride_download .mie_ride_download_title{
 text-align: center;
 color: #fff;
 letter-spacing: 1px;
+padding: 20px;
 
 }
 main .mie_ride_download .mie_ride_download_title h4{
