--- a/public/css/index.css
+++ b/public/css/index.css
@@ -32,6 +32,41 @@
   }
   
 
+  .splash_screen{
+    width: 100%;
+    background-color: #f9f9f9;
+    padding: 30px;
+  }
+  .splash_screen .main_splash_screen{
+display: flex;
+justify-content: center;
+
+  }
+  .splash_screen .main_splash_screen .miefinal{
+ width: 100%;
+ display: flex;
+ justify-content: center;
+  }
+  .splash_screen .main_splash_screen  .welcome_message p{
+    text-align: center;
+    padding: 30px;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+    font-size: 16px;
+
+  }
+  .splash_screen .main_splash_screen .miefinal img{
+ width: 100px;
+  }
+  .splash_screen .main_splash_screen .main_splash_screen_details p{
+ font-size: 16px;
+ text-align: center;
+  }
+
+  .splash_screen .main_splash_screen .scroll_imag{
+    text-align: center;
+
+  }
   .logo_section{
     display: flex;
     justify-content:space-between;
@@ -43,7 +78,7 @@
     margin-top: 8px;
   }
   .logo_section span{
-  margin-top: 10px;
+    margin-top: 10px;
   letter-spacing: 1px;
   font-weight: 500;
   color: #000;
@@ -99,9 +134,9 @@
   border-radius: 4px;
 } */
 
-.main_title_line{
+/* .main_title_line{
   height: 50px;
-}
+} */
 
 .main_banner{
   padding-top: 40px;
@@ -128,8 +163,8 @@ background: linear-gradient(0deg, #434650 0%, #212022 50%);
    main .mie_ride_about{
     background-color: #f9f9f9;
     min-height: 200px;
-    padding-top: 70px;
-    padding-bottom: 60px;
+    padding-top: 60px;
+    padding-bottom: 80px;
     }
 
     main .mie_ride_about p{
@@ -138,15 +173,14 @@ background: linear-gradient(0deg, #434650 0%, #212022 50%);
     }
 
     main .mie_ride_about .main_title_line{
-      padding: 30px 0px;
-      margin-bottom: 50px;
+      padding: 20px 0px;
     }
     main .mie_ride_about .main_title_line h4{
       color: #646464;
       letter-spacing: 2px;
        text-transform: uppercase;
        font-weight:400; 
-       font-size: 20px;
+       font-size: 18px;
 
     }
 
@@ -156,11 +190,11 @@ background: linear-gradient(0deg, #434650 0%, #212022 50%);
        text-transform: uppercase;
        font-weight:300; 
        font-size: 16px;
-      padding-bottom: 40px;
+  
     }
 
     main .mie_ride_about_desc{
-      margin-top: 45px;
+      margin-top: 10px;
       background-color: #ffc61d;
     }
 
@@ -237,10 +271,10 @@ background: linear-gradient(0deg, #434650 0%, #212022 50%);
 
       main .mie_ride_features .main_title_line h4{
          color: #fff;
-         padding: 10px 0px;
          letter-spacing: 2px;
-         font-size: 20px;
-         font-weight: 300;
+         font-weight: 400;
+         font-size: 18px;
+         font-weight: 400;
       }
       main .mie_ride_features .mie_ride_features_desc h4{
         color: #fff;
@@ -320,7 +354,7 @@ background: linear-gradient(0deg, #434650 0%, #212022 50%);
          letter-spacing: 2px;
          text-transform: uppercase;
          font-weight:400; 
-         font-size: 20px;
+         font-size: 18px;
       }
       .mie_ride_contact .contact-form .form_btn{
         display: flex;
@@ -516,11 +550,13 @@ animation: expandLine 3s ease-in-out forwards;
 main .mie_ride_service .main_title_line h4{
 color: #fff;
 letter-spacing: 2px;
-font-weight: 300;
+font-weight: 400;
+font-size: 18px;
 }
 main .mie_ride_service .main_title_line p{
   color: #fff;
   letter-spacing: 1px;
+  font-size: 14px;
   font-weight: 300;
   }
 main .main_ride_service{
@@ -1182,7 +1218,7 @@ main .mie_ride_service .mie_ride_service_left_main .mie_ride_service_left_main_6
       letter-spacing: 2px;
       color: #646464;
       font-weight: 300;
-      font-size: 30px;
+      font-size: 20px;
     }
 
     main .mie_ride_benifits .benifits_row_one .benifits_row_colum {
@@ -1270,9 +1306,7 @@ main .mie_ride_benifits .benifits_row_one .benifits_row_colum_driver .number_ico
  padding: 0px 10px;
 }
 
-main .mie_ride_benifits .benifits_row_one .benifits_row_colum_main{
-  
-}
+
 main .mie_ride_benifits .benifits_row_one  .benifits_row_colum_bellow_2{
   position: relative;
   z-index: 1;
@@ -1335,7 +1369,8 @@ font-weight: bold;
 }
 
 main .mie_ride_benifits .benifits_row_one .benifits_row_colum_driver .number_icon_title{
-text-align: center;
+text-align: start;
+padding: 2px;
 }
 
 main .mie_ride_benifits .benifits_row_one  .benifits_row_colum_driver_bellow_2{
@@ -1437,7 +1472,7 @@ main .mie_ride_benifits .benifits_row_one  .benifits_row_colum_driver_up_2{
 }
 
 .mie_ride_advertise{
-  padding: 30px 0px;
+  padding: 20px 0px;
 }
 .mie_ride_advertise .iphone_details{
   padding: 5px;
@@ -1610,17 +1645,14 @@ animation: expandLine 3s ease-in-out forwards;
 }
 main .mie_ride_download .mie_ride_download_title{
 text-align: center;
-color: #fff;
-letter-spacing: 1px;
-padding: 20px;
 
 }
 main .mie_ride_download .mie_ride_download_title h4{
   color: #fff;
  letter-spacing: 2px;
   text-transform: uppercase;
-  font-weight:300;
-  font-size: 20px;
+  font-weight:400;
+  font-size: 18px;
 }
 main .mie_ride_download .mie_ride_download_title p{
   letter-spacing: 3px;
@@ -1632,8 +1664,8 @@ main .mie_ride_download .mie_ride_download_title p{
    padding: 10px 0px;
 }
 main .mie_ride_download  .main_downloals{
-  padding-top: 50px;
-  padding-bottom: 20px;
+  padding-top: 30px;
+  
 }
 
 
@@ -1828,21 +1860,21 @@ main .mie_ride_download .botton_layer_2{
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 40px;
+  margin-top: 30px;
 
 }
 main .mie_ride_download .botton_layer{
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 40px;
+  margin-top: 30px;
 
 }
 main .mie_ride_download .botton_layer_2 img{
-  opacity: 0.3
+  opacity: 0.4
 }
 main .mie_ride_download .botton_layer img{
-  opacity: 0.3
+  opacity: 0.4
 }
 @media screen and (max-width:991px) {
   main .mie_ride_download .botton_layer_2{
@@ -1955,9 +1987,8 @@ main .mie_ride_features .mie_ride_features_desc {
 main .mie_ride_download .mie_ride_download_title p{
   font-size: 13px;
 }
-main .mie_ride_download .main_downloals {
-  padding-top: 25px;
-}
+
+
 .mie_ride_contact {
   padding: 40px 10px;
   
