--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1996,4 +1996,7 @@ main .mie_ride_download .mie_ride_download_title p{
 .mie_ride_contact .contact_form_left{
 margin-top: -30px;
 }
+main .mie_ride_download .mie_ride_download_title {
+  margin-top: 30px;
+}
 }
