--- a/public/css/index.css
+++ b/public/css/index.css
@@ -98,7 +98,7 @@ justify-content: center;
 }
 .navbar ul li a{
     color: #212022;
-    font-weight: 400;
+    font-weight: 500;
     font-size: 16px;
     line-height: 23px;
     padding: 10px;
@@ -287,10 +287,10 @@ background: linear-gradient(0deg, #434650 0%, #212022 50%);
         padding: 30px 0px;
       }
       main .mie_ride_features .notebook2 ul{
-         width: 75%;
-         left: 45px;
-         top: 40px;
-         position: absolute;
+        width: 75%;
+        left: 75px;
+        top: 46px;
+        position: absolute;
         
       }
 
@@ -325,11 +325,10 @@ background: linear-gradient(0deg, #434650 0%, #212022 50%);
         width: 100%; 
         height: 400px;
        border-radius: 8px;
-      background-image: url("../assets/images/book4.png");
+      background-image: url("../assets/images/Notepad1.png");
       background-repeat: no-repeat;
       background-size:cover;
       box-shadow: 0px 0px 0px rgba(18, 18, 18, 0.41);
-      filter: brightness(0.9);
       position: relative;
       z-index: 0;
       /* box-shadow: rgba(30,31,32,1)0px 5px; */
@@ -337,10 +336,12 @@ background: linear-gradient(0deg, #434650 0%, #212022 50%);
       /* box-shadow: rgb(63,67,75) 0px 2px 4px, rgb(63,67,75) 0px 7px 13px -3px, rgb(63,67,75) 0px -3px 0px inset; */
       
       }
+     
       main .mie_ride_features .notebook4{
         filter: brightness(0.9);
       }
      
+
       .mie_ride_contact {
         padding: 50px 10px;
         background-color: #f9f9f9;
@@ -1968,9 +1969,17 @@ main .mie_ride_benifits .mie_ride_benifits_title {
   padding: 1px 0px;
 }
 
-main .mie_ride_features .notebook2 .second {
-  font-size: 14px;
+main .mie_ride_features .notebook2 ul {
+  width: 70%;
+  left: 75px;
+  top: 46px;
+  position: absolute;
 }
+main .mie_ride_features .notebook2 .second {
+  font-size: 13px;
+}
+
+
 main .mie_ride_features .notebook2 {
   height: 350px;
 }
