--- a/public/css/index.css
+++ b/public/css/index.css
@@ -37,7 +37,8 @@
     background-color: #f9f9f9;
     padding: 30px;
   }
-  .splash_screen .main_splash_screen{
+
+.splash_screen .main_splash_screen{
 display: flex;
 justify-content: center;
 
@@ -149,12 +150,13 @@ background: linear-gradient(0deg, #434650 0%, #212022 50%);
  .banner_main #BannerIndicators .carousel-indicators{
  justify-content: space-between;
  margin-right:0% !important;
- margin-bottom: -1.5rem !important;
+ margin-bottom: -1.2rem !important;
  margin-left: 0% !important;
   
  }
  .banner_main #BannerIndicators .carousel-indicators button{
   width: 10%;
+  height: 2px;
   }
   .banner_main #BannerIndicators .carousel-indicators [data-bs-target] {
     border: 0px solid #fff;
@@ -164,46 +166,46 @@ background: linear-gradient(0deg, #434650 0%, #212022 50%);
     background-color: #f9f9f9;
     min-height: 200px;
     padding-top: 60px;
-    padding-bottom: 80px;
+    height: 100vh;
+    padding-bottom: 40px;
     }
 
-    main .mie_ride_about p{
-    padding: 20px 0px;
-    font-size: 18px;
-    }
+    
 
     main .mie_ride_about .main_title_line{
-      padding: 20px 0px;
+     padding-top: 30px;
+     padding-bottom: 20px;
     }
     main .mie_ride_about .main_title_line h4{
       color: #646464;
       letter-spacing: 2px;
        text-transform: uppercase;
        font-weight:400; 
-       font-size: 18px;
+       font-size: 16px;
 
     }
 
     main .mie_ride_about .main_title_line p{
-      color: #646464;
-      letter-spacing: 1px;
+       color: #646464;
+       letter-spacing: 1px;
        text-transform: uppercase;
-       font-weight:300; 
-       font-size: 16px;
+       margin-top: 20px;
+       font-size: 12px;
   
     }
 
     main .mie_ride_about_desc{
-      margin-top: 10px;
+      margin-top: 18px;
       background-color: #ffc61d;
     }
 
     main .mie_ride_about_desc .mie_ride_about_desc_text p{
-    padding: 20px;
-    font-size: 18px;
+    padding: 40px;
+    font-size: 16px;
     letter-spacing: 2px;
     text-align: center;
     font-weight: 500;
+    line-height: 30px;
     color: #212022;
       
   }
@@ -270,30 +272,33 @@ background: linear-gradient(0deg, #434650 0%, #212022 50%);
       }
 
       main .mie_ride_features .main_title_line h4{
-         color: #fff;
-         letter-spacing: 2px;
+         letter-spacing: 3px;
          font-weight: 400;
-         font-size: 18px;
-         font-weight: 400;
+         font-size: 16px;
+         font-family: "NexaLight";
+         color: rgb(255, 255, 255);     
       }
+
       main .mie_ride_features .mie_ride_features_desc h4{
         color: #fff;
          padding: 10px 0px;
-         letter-spacing: 2px;
-         font-size: 18px;
+         letter-spacing: 3px;
+         font-size: 13px;
          font-weight: 300;
       }
       main .mie_ride_features .mie_ride_features_desc{
         padding: 30px 0px;
       }
       main .mie_ride_features .notebook2 ul{
-        width: 75%;
-        left: 75px;
-        top: 46px;
-        position: absolute;
+       width: 80%;
+       margin: 10px auto;
+       padding-top: 30px;
         
       }
 
+      main .mie_ride_features .notebook2 ul li{
+        line-height: 30px;
+      }
       main .mie_ride_features .notebook2 .first{
       color:  #55bd4a;
       position: relative;
@@ -315,8 +320,8 @@ background: linear-gradient(0deg, #434650 0%, #212022 50%);
           z-index: 1;
         overflow: hidden;
          font-size: 15px;
-         max-width: 200px;
-         max-height: 250px;
+         /* max-width: 200px;
+         max-height: 250px; */
 
           }
      
@@ -325,16 +330,12 @@ background: linear-gradient(0deg, #434650 0%, #212022 50%);
         width: 100%; 
         height: 400px;
        border-radius: 8px;
-      background-image: url("../assets/images/Notepad1.png");
+      background-image: url("../assets/images/book2.png");
       background-repeat: no-repeat;
-      background-size:cover;
-      box-shadow: 0px 0px 0px rgba(18, 18, 18, 0.41);
+      background-size:contain;
       position: relative;
       z-index: 0;
-      /* box-shadow: rgba(30,31,32,1)0px 5px; */
-      /* box-shadow: rgba(30,31,32,1) 0px 1px 1px, rgba(30,31,32,1) 0px 2px 2px, rgba(30,31,32,1) 0px 2px 0px, rgba(30,31,32,1) 0px 8px 8px, rgba(30,31,32,1) 0px 4px 0px; */
-      /* box-shadow: rgb(63,67,75) 0px 2px 4px, rgb(63,67,75) 0px 7px 13px -3px, rgb(63,67,75) 0px -3px 0px inset; */
-      
+         
       }
      
       main .mie_ride_features .notebook4{
@@ -352,10 +353,10 @@ background: linear-gradient(0deg, #434650 0%, #212022 50%);
       }
       .mie_ride_contact h4{
          color: #646464;
-         letter-spacing: 2px;
+         letter-spacing: 3px;
          text-transform: uppercase;
          font-weight:400; 
-         font-size: 18px;
+         font-size: 20px;
       }
       .mie_ride_contact .contact-form .form_btn{
         display: flex;
@@ -405,14 +406,7 @@ background: linear-gradient(0deg, #434650 0%, #212022 50%);
 
       }
     
-      .mie_ride_service:hover .title_line{
-        display: inline-block;
-        background: linear-gradient(0deg, #434650 0%, #212022 50%);
-        width: 0;
-        height: 4px;
-       margin: 0 auto;
-      animation: expandLine 3s ease-in-out forwards;
-    }
+      
     
 
   .mie_ride_contact .contact_row{
@@ -439,9 +433,10 @@ background: linear-gradient(0deg, #434650 0%, #212022 50%);
   }
   .mie_ride_contact .contact_our_mission .contact_our_mission_section h3{
     text-transform:uppercase;
-    font-weight: 600;
-    font-size: 14px;
+    font-weight: 500;
+    font-size: 13px;
     margin-top: 10px;
+    letter-spacing: 3px;
   }
   .mie_ride_contact .contact_our_mission .contact_our_mission_section{
     border:1.5px solid #434650;
@@ -456,19 +451,25 @@ background: linear-gradient(0deg, #434650 0%, #212022 50%);
   }
   .mie_ride_contact .contact_our_mission .contact_our_mission_details p{
     font-size: 14px;
-    padding-top: 20px;
+    padding-top: 25px;
     font-weight: 500;
     text-align: center;
+    color: #000;
   }
 
   .mie_ride_contact .contact_form_left .icon_text{
   margin-left: 40px;
+  color: #000;
   }
   .mie_ride_contact .contact_form_left span{
     margin-left: 20px;
     color: #828282;
-    font-weight: 500;
+    font-size: 13px;
     text-transform: uppercase;
+  }
+  .mie_ride_contact .contact-form p{
+  font-size: 15px;
+  letter-spacing: 2px;
   }
 
   @media screen and (max-width:991px) {
@@ -505,7 +506,7 @@ background: linear-gradient(0deg, #434650 0%, #212022 50%);
   }
 
   main .mie_ride_service{
-    padding: 20px 0px;
+    padding: 30px 0px;
     background: rgb(63,67,75);
     background: linear-gradient(0deg, rgb(100, 102, 105) 30%, rgba(30,31,32,1) 100%);
 
@@ -539,50 +540,51 @@ main .mie_ride_service .mie_ride_service_left_main{
     /* background-color: #f9f9f9; */
     position: relative;
     z-index: 3;
+    padding: 10px;
+ 
 }
-main .mie_ride_service:hover .title_line{
-  display: inline-block;
-  background: white;
-  width: 0;
-  height: 4px;
- margin: 0 auto;
-animation: expandLine 3s ease-in-out forwards;
-}
+
 main .mie_ride_service .main_title_line h4{
-color: #fff;
-letter-spacing: 2px;
-font-weight: 400;
-font-size: 18px;
+color: rgb(255, 255, 255);
+letter-spacing: 3px;
+font-weight: 300;
+font-size: 16px;
+
 }
 main .mie_ride_service .main_title_line p{
-  color: #fff;
-  letter-spacing: 1px;
-  font-size: 14px;
-  font-weight: 300;
-  }
+  
+    font-family: "NexaLight";
+    color: rgb(255, 255, 255);
+    line-height: 1.32;
+  letter-spacing: 6px;
+  margin-top: 10px;
+  font-size: 13px;
+ }
 main .main_ride_service{
   margin-top: 40px;
 
 }
 main .mie_ride_service .mie_ride_service_left_main h4{
   right: 43px;
-  top: -15px;
+  top: 0px;
   color: #646464;
   position: absolute;
   text-transform: uppercase;
   font-weight:300;
   z-index: 100;
-  font-size: 20px;
+  letter-spacing: 2px;
+  font-size: 16px;
 }
 main .mie_ride_service .mie_ride_service_right_main h4{
   left: 30px;
-  top: -15px;
+  top: 0px;
   color: #646464;
   position: absolute;
   text-transform: uppercase;
   font-weight: 300;
   z-index: 100;
-  font-size: 20px;
+  letter-spacing: 2px;
+  font-size: 16px;
 }
 
 
@@ -599,6 +601,13 @@ main .mie_ride_service .mie_ride_service_right_main h4{
   main .mie_ride_service .activeservice .description{
   display: block;
   overflow: hidden;
+  height: 150px;
+  -webkit-transition: height 1.5s linear;
+-moz-transition: height 1.5s linear;
+-ms-transition: height 1.5s linear;
+-o-transition: height 1.5s linear;
+transition: height 1.5s linear;
+  
   }
 
 /* left */
@@ -612,13 +621,17 @@ main .mie_ride_service .mie_ride_service_left_main{
   z-index: 100;
   background-color: #f9f9f9;
   border-radius: 30px;
- 
+  padding: 0px 10px;
+  
 }
 
 main .mie_ride_service  .mie_ride_service_left_main_image{
-position:absolute;
-margin-top:-15px;
-width:100%;
+  position: absolute;
+  margin-top: -15px;
+  width: 100%;
+  left: 0px;
+  right: 0px;
+ 
 }
 
 main .mie_ride_service  .mie_ride_service_left_main_image .top_image_left{
@@ -660,7 +673,7 @@ main .mie_ride_service .mie_ride_service_left_main .mie_ride_service_left_main_2
 main .mie_ride_service .mie_ride_service_left_main .mie_ride_service_left_main_2 .mie_ride_service_left_2 .Sharing {
   background-color: #ffc61d;
   position: relative;
-  margin-top: 80px;
+  margin-top: 90px;
   padding: 30px 0px;
   color:black;
   z-index: 135;
@@ -692,10 +705,11 @@ main .mie_ride_service .mie_ride_service_left_main .mie_ride_service_left_main_2
   right: 30px;
   font-size: 18px;
   top: 50px;
-  color: #000;
+  color: rgb(1, 1, 1);
+  
 }
 main .mie_ride_service .mie_ride_service_left_main .mie_ride_service_left_main_2 .mie_ride_service_left_2 .description{
-  color: #000;
+  color: rgb(1, 1, 1);
   padding-bottom: 50px;
   margin-top: -30px;
   font-size: 14px;
@@ -922,6 +936,7 @@ main .mie_ride_service .mie_ride_service_left_main  .mie_ride_service_left_main_
   left: 0;
   margin-top: -90px;
   z-index: 3;
+  padding-bottom: 15px;
  }
  main .mie_ride_service .mie_ride_service_left_main  .mie_ride_service_left_main_6 .mie_ride_service_left_6 {
   width: 100%;
@@ -989,10 +1004,10 @@ main .mie_ride_service .mie_ride_service_left_main .mie_ride_service_left_main_6
   main .mie_ride_service .mie_ride_service_right_main{
       width:100%;
       margin-top: 340px;
-      /* margin-bottom: 100px; */
       position: relative;
       height: auto;
       z-index: 100;
+      padding: 0px 10px;
       background-color: #f9f9f9;
       border-radius: 30px;
      
@@ -1002,6 +1017,7 @@ main .mie_ride_service .mie_ride_service_left_main .mie_ride_service_left_main_6
     position:absolute;
     margin-top:-15px;
     width:100%;
+    left: 0;
   }
   
   main .mie_ride_service  .mie_ride_service_right_main_image .top_image_right{
@@ -1042,7 +1058,7 @@ main .mie_ride_service .mie_ride_service_left_main .mie_ride_service_left_main_6
     main .mie_ride_service .mie_ride_service_right_main .mie_ride_service_right_main_2 .mie_ride_service_right_2 .Availabilty {
       background-color: #f3e638;
       position: relative;
-      margin-top: 80px;
+      margin-top: 90px;
       padding: 40px 0px;
       color: white;
       z-index: 135;
@@ -1082,8 +1098,6 @@ main .mie_ride_service .mie_ride_service_left_main .mie_ride_service_left_main_6
     
 
     @media screen and (max-width:991px) {
-      
-  
       main .mie_ride_service .mie_ride_service_right_main{
       margin-top: 60px; 
     }
@@ -1105,6 +1119,7 @@ main .mie_ride_service .mie_ride_service_left_main .mie_ride_service_left_main_6
       position:relative;
       left: 0;
       margin-top: -100px;
+      padding-bottom: 15px;
       /* background-color: #f9f9f9; */
       z-index: 3;
      }
@@ -1216,10 +1231,12 @@ main .mie_ride_service .mie_ride_service_left_main .mie_ride_service_left_main_6
 
     }
     main .mie_ride_benifits .mie_ride_benifits_title h4{
-      letter-spacing: 2px;
-      color: #646464;
-      font-weight: 300;
-      font-size: 20px;
+      letter-spacing: 3px;
+      font-weight: 400;
+      font-size: 16px;
+      font-family: "NexaLight";
+      color: rgb(0, 0, 0);
+      
     }
 
     main .mie_ride_benifits .benifits_row_one .benifits_row_colum {
@@ -1267,7 +1284,33 @@ main .mie_ride_service .mie_ride_service_left_main .mie_ride_service_left_main_6
    font-weight: bold;
    font-size: 30px;
    letter-spacing: 2px;
+   background-color: #60e053;
   }
+
+  main .mie_ride_benifits .benifits_row_one .driver_text_section h5{
+    text-transform: uppercase;
+    margin: 0px;
+    padding: 0px;
+    font-weight: bold;
+    font-size: 30px;
+    letter-spacing: 2px;
+    text-align: center;
+    background-color: #ffc61d;
+   }
+
+   main .mie_ride_benifits .benifits_row_one .driver_text_section p{
+    font-size: 30px;
+    margin: 0px;
+    padding: 0px;
+    letter-spacing: 2px;
+    font-weight: bold;
+   color:#fff;
+   filter: drop-shadow(-0.5px 0 0 rgb(10, 10, 10))
+           drop-shadow(0.5px 0 0 rgb(12, 12, 12))
+           drop-shadow(0 -0.5px 0 rgb(17, 17, 17))
+           drop-shadow(0 0.5px 0 rgb(16, 16, 16));
+
+}
   main .mie_ride_benifits .benifits_row_one .benifits_row_colum .number_icon{
     text-align: center;
     padding: 10px;
@@ -1331,6 +1374,9 @@ main .mie_ride_benifits .benifits_row_one  .benifits_row_colum_bellow_2 .number_
 main .mie_ride_benifits .benifits_row_one  .benifits_row_colum_up_2 .number_icon_2{
  padding: 10px;
 }
+main .mie_ride_benifits .benifits_row_one  .benifits_row_colum_up_2 .number_icon_2 img{
+  width: 20px;
+ }
 
 main .mie_ride_benifits .benifits_row_one  .benifits_row_colum_up_2{
     position: relative;
@@ -1397,6 +1443,10 @@ left:5px;
 main .mie_ride_benifits .benifits_row_one  .benifits_row_colum_driver_up_2 .number_icon_2{
 padding: 10px;
 }
+
+main .mie_ride_benifits .benifits_row_one  .benifits_row_colum_driver_up_2 .number_icon_2 img{
+  width: 20px;
+  }
 
 main .mie_ride_benifits .benifits_row_one  .benifits_row_colum_driver_up_2{
   position: relative;
@@ -1650,18 +1700,18 @@ text-align: center;
 }
 main .mie_ride_download .mie_ride_download_title h4{
   color: #fff;
- letter-spacing: 2px;
+ letter-spacing: 3px;
   text-transform: uppercase;
   font-weight:400;
-  font-size: 18px;
+  font-size: 16px;
 }
 main .mie_ride_download .mie_ride_download_title p{
   letter-spacing: 3px;
   color: #fff;
-  letter-spacing: 2px;
+  letter-spacing: 6px;
    text-transform: uppercase;
    font-weight:300;
-   font-size: 15px;
+   font-size: 13px;
    padding: 10px 0px;
 }
 main .mie_ride_download  .main_downloals{
@@ -1706,6 +1756,7 @@ main .mie_ride_download .card_container_left .app_details .app_details_circul{
   position: absolute;
    top: -80px;
   right:20px;
+  width: 30px;
 }
 /* Green card (front) */
 main .mie_ride_download .card_container_left .card-front {
@@ -1723,23 +1774,31 @@ main .mie_ride_download .card_container_left .card-back {
   left: 20px;
  
 }
+main .mie_ride_download .card_container_left .app_details_title p{
+  font-size: 18px;
+  color: #333;
+  letter-spacing: 2px;
+text-align: start;
+}
 main .mie_ride_download .card_container_left .card-back p{
-  margin-top: 250px;
+  margin-top: 245px;
+    font-size: 18px;
+    color: #333;
+    letter-spacing: 2px;
+  text-align: center;
 }
 
 
 
 /* Text styling */
 main .mie_ride_download .card_container_left h2 {
-  font-size: 24px;
+  font-size: 20px;
   font-weight: bold;
   color: black;
+  letter-spacing: 2px;
 }
 
-main .mie_ride_download .card_container_left p {
-  font-size: 18px;
-  color: #333;
-}
+
 
 main .mie_ride_download  .store-logos a{
   text-decoration: none;
@@ -1760,7 +1819,6 @@ main .mie_ride_download .letf_main_download .card_container_left .store-logo {
 
 main .mie_ride_download .letf_main_download .card_container_left .app_details_title{
   position: absolute;
-  left: 10px;
   top: -30px;
   
 }
@@ -1822,7 +1880,10 @@ main .mie_ride_download .right_main_download .card_container_right .card-back {
  
 }
 main .mie_ride_download .right_main_download .card_container_right .card-back p{
-  margin-top: 250px;
+    margin-top: 245px;
+    text-align: center;
+    font-size: 18px;
+    letter-spacing: 2px;
 }
 
 /* Store logos styling */
@@ -1842,20 +1903,23 @@ main .mie_ride_download .right_main_download .card_container_right .store-logo {
 
 main .mie_ride_download .right_main_download .card_container_right .app_details_title{
   position: absolute;
-  right: 10px;
+  right: 20px;
   top: -30px;
   
 }
 /* Text styling */
 main .mie_ride_download .right_main_download .card_container_right h2 {
-  font-size: 24px;
+  font-size: 20px;
   font-weight: bold;
   color:#fff;
+  letter-spacing: 2px;
 }
 
 main .mie_ride_download .right_main_download .card_container_right p {
-  font-size: 18px;
+  font-size: 16px;
   color: #fff;
+  letter-spacing: 2;
+  text-align: end;
 }
 main .mie_ride_download .botton_layer_2{
   display: flex;
@@ -1907,11 +1971,11 @@ main .mie_ride_download .botton_layer img{
 
 /* Splash Screen Styling */
 #splash-screen {
-  position: fixed;
-  top: 0;
-  left: 0;
+  /* position: fixed; */
+  /* top: 0;
+  left: 0; */
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: #f9f9f9; /* Green background */
   display: flex;
   justify-content: center;
@@ -1919,7 +1983,6 @@ main .mie_ride_download .botton_layer img{
   color: #000;
   font-family: Arial, sans-serif;
   font-size: 36px;
-  z-index: 1000;
 }
 
 
@@ -1970,10 +2033,7 @@ main .mie_ride_benifits .mie_ride_benifits_title {
 }
 
 main .mie_ride_features .notebook2 ul {
-  width: 70%;
-  left: 75px;
-  top: 46px;
-  position: absolute;
+ 
 }
 main .mie_ride_features .notebook2 .second {
   font-size: 13px;
@@ -1981,7 +2041,7 @@ main .mie_ride_features .notebook2 .second {
 
 
 main .mie_ride_features .notebook2 {
-  height: 350px;
+  /* height: 350px; */
 }
 main .mie_ride_features .mie_ride_features_desc h4{
 margin-top: 30px;
