--- a/public/css/index.css
+++ b/public/css/index.css
@@ -139,6 +139,9 @@ justify-content: center;
   height: 50px;
 } */
 
+.mie_ride_banner{
+  height: 100vh;
+}
 .main_banner{
   padding-top: 40px;
   padding-bottom: 50px;
