--- a/public/css/index.css
+++ b/public/css/index.css
@@ -141,16 +141,21 @@ justify-content: center;
 
 .mie_ride_banner{
   background: linear-gradient(0deg, #434650 0%, #212022 50%);
-  height: 100vh;
+  height: 90vh;
 }
-
 .main_banner{
-  padding-top: 60px;
+  padding-top: 40px;
   /* padding-bottom: 50px; */
 }
+/* .main_banner{
+  padding-top: 40px;
+  padding-bottom: 50px;
+}
+.banner_main{
+  
+ } */
 
-
-.banner_main #BannerIndicators .carousel-indicators{
+ .banner_main #BannerIndicators .carousel-indicators{
  justify-content: space-between;
  margin-right:0% !important;
  margin-bottom: -1.2rem !important;
