--- a/public/css/index.css
+++ b/public/css/index.css
@@ -140,8 +140,8 @@ justify-content: center;
 } */
 
 .main_banner{
-  padding-top: 40px;
-  padding-bottom: 50px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 .banner_main{
 background: linear-gradient(0deg, #434650 0%, #212022 50%);
@@ -1999,8 +1999,11 @@ main .mie_ride_download .botton_layer img{
 
 @media screen and (max-width:991px) {
   .main_banner {
-    padding-top: 60px;
+    padding-top: 70px;
     padding-bottom: 70px;
+    padding-left: 20px;
+    padding-right: 20px;
+
 }
   .logo_section{
     padding: 5px 0px;
