--- a/public/css/index.css
+++ b/public/css/index.css
@@ -6,31 +6,17 @@
     font-family: "Nexa Bold";
   }
 
-  h2{
-    font-size: 18px;
-    letter-spacing: 2px;
-    font-weight: 600;
-  }
-  h3{
-    font-size: 18px;
-    letter-spacing: 2px;
-    font-weight: 500; 
-  } 
-  
-
-  @media screen and (max-width:768px) {
-    h2{
-      font-size: 16px;
-      letter-spacing: 1px;
-
-    }
-    h3{
-      font-size: 16px;
-      letter-spacing: 1px;
-      
-    } 
+  html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    scroll-behavior: smooth; /* Smooth scrolling */
   }
   
+  section {
+    height: 100vh; /* Full screen height */
+  }
+
 
   .splash_screen{
     width: 100%;
@@ -140,8 +126,8 @@ justify-content: center;
 } */
 
 .main_banner{
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding-top: 40px;
+  padding-bottom: 50px;
 }
 .banner_main{
 background: linear-gradient(0deg, #434650 0%, #212022 50%);
@@ -162,6 +148,26 @@ background: linear-gradient(0deg, #434650 0%, #212022 50%);
     border: 0px solid #fff;
 }
    
+
+@media screen and (max-width: 991px) {
+  .main_banner {
+    padding-top: 50px;
+    padding-bottom: 40px;
+}
+  .logo_section{
+    padding: 5px 0px;
+  }
+  .logo_section img {
+    margin-top: 0px;
+}
+.banner_main #BannerIndicators .carousel-indicators {
+  padding: 0px 10px;
+}
+}
+
+
+
+
    main .mie_ride_about{
     background-color: #f9f9f9;
     min-height: 200px;
@@ -221,6 +227,15 @@ background: linear-gradient(0deg, #434650 0%, #212022 50%);
       padding-top: 30px;
       padding-bottom: 40px;
       }
+      main .mie_ride_about_desc .mie_ride_about_desc_text p {
+        padding: 10px;
+       font-size: 14px;
+        letter-spacing: 2px;
+        text-align: center;
+        font-weight: 500;
+        line-height: 25px;
+        color: #212022;
+    }
   
       main .mie_ride_about p{
       font-size: 12px;
@@ -1302,6 +1317,7 @@ main .mie_ride_service .mie_ride_service_left_main .mie_ride_service_left_main_6
     font-size: 30px;
     margin: 0px;
     padding: 0px;
+    text-align: center;
     letter-spacing: 2px;
     font-weight: bold;
    color:#fff;
@@ -1998,22 +2014,7 @@ main .mie_ride_download .botton_layer img{
 
 
 @media screen and (max-width:991px) {
-  .main_banner {
-    padding-top: 70px;
-    padding-bottom: 70px;
-    padding-left: 20px;
-    padding-right: 20px;
-
-}
-  .logo_section{
-    padding: 5px 0px;
-  }
-  .logo_section img {
-    margin-top: 0px;
-}
-.banner_main #BannerIndicators .carousel-indicators {
-  padding: 0px 10px;
-}
+  
   main .mie_ride_service .main_title_line p {
       margin-top: 20px;
        font-size: 13px;
