--- a/public/css/index.css
+++ b/public/css/index.css
@@ -143,7 +143,7 @@ background: linear-gradient(0deg, #434650 0%, #212022 50%);
     background-color: #f9f9f9;
     min-height: 200px;
     padding-top: 60px;
-    height: 100vh;
+    /* height: 100vh; */
     padding-bottom: 40px;
     }
 
