--- a/public/css/index.css
+++ b/public/css/index.css
@@ -287,10 +287,9 @@ justify-content: center;
       background-image: url("../assets/images/book2.png");
       background-repeat: no-repeat;
       background-size:contain;
-      position: relative;
-      z-index: 0;
+      background-position: center; /* Centers the image */
       display: flex;
-      justify-content: center;
+      justify-content:center;
       align-items:start;
          
       }
@@ -302,11 +301,9 @@ justify-content: center;
 
       main .mie_ride_features .notebook2 ul{
        width: 75%;
-       position: absolute;
-       left: 0;
-       right: 0;
-       top: 30px;
-        
+       position:relative; 
+       margin-top: 30px;
+        margin-left: 5px;
       }
 
       main .mie_ride_features .notebook2 ul li{
@@ -325,7 +322,7 @@ justify-content: center;
         color:  #fff;
         position: relative;
        z-index: 1;
-      overflow: hidden;
+        overflow: hidden;
 
         }
         main .mie_ride_features .notebook2 .third{
@@ -333,9 +330,7 @@ justify-content: center;
           position: relative;
           z-index: 1;
         overflow: hidden;
-        
-
-
+      
           }
      
 
