--- a/public/css/index.css
+++ b/public/css/index.css
@@ -6,13 +6,12 @@
     font-family: "Nexa Bold";
   }
 
-
-  
-
   .splash_screen{
     width: 100%;
     background-color: #f9f9f9;
     padding: 30px;
+    overflow: hidden; /* To handle content overflow */
+    transition: height 0.5s ease; 
   }
 
 .splash_screen .main_splash_screen{
@@ -1513,11 +1512,7 @@ main .mie_ride_benifits .benifits_row_one  .benifits_row_colum_driver_up_2{
   padding: 10px;
 
 }
-/* .mie_ride_advertise .main_iphone .iphone_image img{
-  -webkit-box-shadow: -14px 10px 18px -5px rgba(191, 191, 191, 1);
--moz-box-shadow: -14px 10px 18px -5px rgba(191, 191, 191, 1);
-box-shadow: -14px 10px 18px -5px rgba(191, 191, 191, 1);
-} */
+
 .mie_ride_advertise .iphone_details .iphone_details_below{
   position: relative;
  background-color: #ffc61d;
@@ -2033,15 +2028,15 @@ main .mie_ride_download .mie_ride_download_title {
 }
 
 
-   /* Responsive behavior */
+   
    @media (max-width: 768px) {
   
     main .mie_ride_features .notebook2 ul {
-      width: 80%; /* Increase width for smaller screens */
+      width: 80%; 
       top: 20px;
     }
     main .mie_ride_features .notebook2 ul li {
-      font-size: 16px; /* Adjust font size for smaller screens */
+      font-size: 16px; 
       line-height: 25px;
     }
   }
