--- a/public/css/index.css
+++ b/public/css/index.css
@@ -114,7 +114,7 @@ justify-content: center;
   justify-content: center;
   align-items: center;
   background: rgb(30,31,32);
-background: linear-gradient(0deg, rgba(30,31,32,1) 50%, rgb(72, 75, 79) 100%);
+background: linear-gradient(0deg, #1e1f21 50%, #2f3137 100%);
 }
 
  .banner_main #BannerIndicators .carousel-indicators{
