--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2026,7 +2026,7 @@ main .mie_ride_download .botton_layer img{
     padding-bottom: 40px;
 }
   .logo_section{
-    padding: 5px 0px;
+    padding: 10px;
   }
   .logo_section img {
     margin-top: 0px;
